[package]
name = "filecrypt"
version = "0.1.0"
edition = "2021"

[dependencies]
dryoc = "0.7.2"
aes-gcm-siv = "0.11.1"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
libc = "0.2"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
rpassword = "7.3"
threefish = "0.5"
cipher = "0.4"
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
serpent = "0.5"
camellia = "0.1"
kuznyechik = "0.8"
argon2 = "0.5"
chacha20 = "0.9"

[[bin]]
name = "aes"
path = "src/bin/aes.rs"

[[bin]]
name = "cha"
path = "src/bin/cha.rs"

[[bin]]
name = "tf"
path = "src/bin/tf.rs"

[[bin]]
name = "serp"
path = "src/bin/serp.rs"

[[bin]]
name = "cam"
path = "src/bin/cam.rs"

[[bin]]
name = "kuz"
path = "src/bin/kuz.rs"

[[bin]]
name = "otp"
path = "src/bin/otp.rs"

[[bin]]
name = "otpkg"
path = "src/bin/otpkg.rs"