[package]
name = "filecrypt"
version = "0.1.0"
edition = "2024"

[dependencies]
dryoc = "0.7.2"
aes-gcm-siv = "0.11.1"
clap = { version = "4.5.60", features = ["derive"] }
anyhow = "1.0.102"
libc = "0.2.182"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
threefish = "0.5.2"
cipher = "0.4.4"
sha2 = "0.10.9"
hmac = "0.12.1"
hkdf = "0.12.4"
serpent = "0.5.1"
camellia = "0.1.0"
kuznyechik = "0.8.2"
generic-array = "0.14.7"
chacha20 = "0.10.0"
argon2 = "0.5.3"
rpassword = "7.4.0"
[[bin]]
name = "aes"
path = "src/bin/aes.rs"
[[bin]]
name = "cha"
path = "src/bin/cha.rs"
[[bin]]
name = "tf"
path = "src/bin/tf.rs"
[[bin]]
name = "serp"
path = "src/bin/serp.rs"
[[bin]]
name = "cam"
path = "src/bin/cam.rs"
[[bin]]
name = "kuz"
path = "src/bin/kuz.rs"
[[bin]]
name = "otp"
path = "src/bin/otp.rs"
[[bin]]
name = "otpkg"
path = "src/bin/otpkg.rs"
[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"










