[package]
name = "sivlock"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm-siv = { version = "0.11", features = ["std"] }
aead = { version = "0.5", features = ["stream"] }
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
blake3 = "1"
zeroize = "1"
rpassword = "7"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
rand = "0.8"

# ADD THIS for Windows atomic replacement
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }